# reservations

./: .gitignore  README.md  pyproject.toml
reservations_backend/: manage.py  pyproject.toml
reservations_backend/reservations_api/: serializers.py  tests.py  urls.py  views.py
reservations_backend/reservations_backend/: asgi.py  urls.py  wsgi.py
reservations_backend/reservations_backend/settings/: .gitignore  base.py  development.py  localhost.py
reservations_backend/reservations_core/: admin.py  apps.py  models.py  tests.py
reservations_backend/reservations_core/migrations/: 0001_initial.py
reservations_frontend/: README.md  env.d.ts  package-lock.json  package.json  vite.config.ts
reservations_frontend/src/: api.ts  main.ts
reservations_frontend/src/components/: Button.vue  LoginForm.vue  TheWelcome.vue
reservations_frontend/src/components/form-controls/: TextInput.vue
reservations_frontend/src/router/: index.ts
reservations_frontend/src/services/: authService.ts
reservations_frontend/src/utils/: auth.ts
reservations_frontend/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue
